bk_ida/gccida/g1/distribute_bit_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3410:28: error: must use 'enum' tag to refer to type 'tree_code'
tree  distribute_bit_expr( tree_code code, tree type, tree arg0, tree arg1) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3413:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3417:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3419:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3462:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v13 = build( ( tree_code)*( ( unsigned __int8 *)&arg0->block.common + 16), type, low, v12); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/fold-const.c:3462:26: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
v13 = build( ( tree_code)*( ( unsigned __int8 *)&arg0->block.common + 16), type, low, v12); 
             ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/distribute_bit_expr/src/obj/fold-const.o] Error 1
